@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v21.12.9-cur, done by cs@nop.
--;-;-;2021-12-09 00:50:48, took 00:06:36, with 100 workers, on 2510 cases, 0 failed, 0 traces, 1 retries
+-;-;-;2021-12-09 10:52:06, took 00:06:16, with 100 workers, on 2516 cases, 0 failed, 0 traces, 5 retries
 -;-;-;./rtr.bin
 http://sources.nop.hu/cfg/basic.tst;basic.tst;success;dummy test
 http://sources.nop.hu/cfg/conn-amt01.tst;conn-amt01.tst;success;amt over ipv4
@@ -2225,6 +2225,9 @@ http://sources.nop.hu/cfg/rout-isis101.tst;rout-isis101.tst;success;isis address
 http://sources.nop.hu/cfg/rout-isis102.tst;rout-isis102.tst;success;integrated isis address unsuppression
 http://sources.nop.hu/cfg/rout-isis103.tst;rout-isis103.tst;success;isis md5 authentication
 http://sources.nop.hu/cfg/rout-isis104.tst;rout-isis104.tst;success;isis lsp md5 authentication
+http://sources.nop.hu/cfg/rout-isis105.tst;rout-isis105.tst;success;isis dynamic icmp metric
+http://sources.nop.hu/cfg/rout-isis106.tst;rout-isis106.tst;success;isis dynamic udp metric
+http://sources.nop.hu/cfg/rout-isis107.tst;rout-isis107.tst;success;isis dynamic twamp metric
 http://sources.nop.hu/cfg/rout-lsrp01.tst;rout-lsrp01.tst;success;lsrp point2point connection
 http://sources.nop.hu/cfg/rout-lsrp02.tst;rout-lsrp02.tst;success;lsrp point2multipoint connection
 http://sources.nop.hu/cfg/rout-lsrp03.tst;rout-lsrp03.tst;success;lsrp point2point chain
@@ -2370,6 +2373,9 @@ http://sources.nop.hu/cfg/rout-ospf51.tst;rout-ospf51.tst;success;ospf default a
 http://sources.nop.hu/cfg/rout-ospf52.tst;rout-ospf52.tst;success;ospf address unsuppression
 http://sources.nop.hu/cfg/rout-ospf53.tst;rout-ospf53.tst;success;ospf maximum metric
 http://sources.nop.hu/cfg/rout-ospf54.tst;rout-ospf54.tst;success;ospf md5 authentication
+http://sources.nop.hu/cfg/rout-ospf55.tst;rout-ospf55.tst;success;ospf dynamic icmp cost
+http://sources.nop.hu/cfg/rout-ospf56.tst;rout-ospf56.tst;success;ospf dynamic udp cost
+http://sources.nop.hu/cfg/rout-ospf57.tst;rout-ospf57.tst;success;ospf dynamic twamp cost
 http://sources.nop.hu/cfg/rout-pbr01.tst;rout-pbr01.tst;success;policy routing with nexthop
 http://sources.nop.hu/cfg/rout-pbr02.tst;rout-pbr02.tst;success;policy routing with interface and nexthop between vrfs
 http://sources.nop.hu/cfg/rout-pbr03.tst;rout-pbr03.tst;success;policy routing with interface and nexthop
