@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.12.9-cur, done by cs@nop.<br/>
-tested: 2021-12-09 00:50:48, took 00:06:36, with 100 workers, on 2510 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2021-12-09 10:52:06, took 00:06:16, with 100 workers, on 2516 cases, 0 failed, 0 traces, 5 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -2238,6 +2238,9 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-isis102.tst">rout-isis102.tst</a></td><td>success</td><td>integrated isis address unsuppression</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-isis103.tst">rout-isis103.tst</a></td><td>success</td><td>isis md5 authentication</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-isis104.tst">rout-isis104.tst</a></td><td>success</td><td>isis lsp md5 authentication</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-isis105.tst">rout-isis105.tst</a></td><td>success</td><td>isis dynamic icmp metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-isis106.tst">rout-isis106.tst</a></td><td>success</td><td>isis dynamic udp metric</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-isis107.tst">rout-isis107.tst</a></td><td>success</td><td>isis dynamic twamp metric</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp01.tst">rout-lsrp01.tst</a></td><td>success</td><td>lsrp point2point connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp02.tst">rout-lsrp02.tst</a></td><td>success</td><td>lsrp point2multipoint connection</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-lsrp03.tst">rout-lsrp03.tst</a></td><td>success</td><td>lsrp point2point chain</td></tr>
@@ -2383,6 +2386,9 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-ospf52.tst">rout-ospf52.tst</a></td><td>success</td><td>ospf address unsuppression</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-ospf53.tst">rout-ospf53.tst</a></td><td>success</td><td>ospf maximum metric</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-ospf54.tst">rout-ospf54.tst</a></td><td>success</td><td>ospf md5 authentication</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-ospf55.tst">rout-ospf55.tst</a></td><td>success</td><td>ospf dynamic icmp cost</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-ospf56.tst">rout-ospf56.tst</a></td><td>success</td><td>ospf dynamic udp cost</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/rout-ospf57.tst">rout-ospf57.tst</a></td><td>success</td><td>ospf dynamic twamp cost</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-pbr01.tst">rout-pbr01.tst</a></td><td>success</td><td>policy routing with nexthop</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-pbr02.tst">rout-pbr02.tst</a></td><td>success</td><td>policy routing with interface and nexthop between vrfs</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/rout-pbr03.tst">rout-pbr03.tst</a></td><td>success</td><td>policy routing with interface and nexthop</td></tr>
